--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "@prisma/client": "^5.22.0",
+    "argon2": "^0.41.1",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "cuid": "^3.0.0",
