--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "argon2": "^0.41.1",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "cuid": "^3.0.0",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
