--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "file-nest",
+  "name": "file-nest-v",
   "version": "1.0.0",
   "description": "Node.js app with Prisma for GCP Cloud Run",
   "main": "src/index.js",
